--- a/ZenCat-Front-User/index.html
+++ b/ZenCat-Front-User/index.html
@@ -1,14 +1,17 @@
 <!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <link rel="stylesheet" href="src/index.css"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ZenCat</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+<html lang="es" class="scroll-smooth">
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="stylesheet" href="src/index.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>ZenCat</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
